# sup

./: .gitignore  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: blocker.rs  content.js  lib.rs  main.rs  offline.html  rules.txt  tray.rs
